--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Perica Bartulović feat. Jonas Schmedtmann",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
