--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
     "qs": "^6.14.0",
     "slugify": "^1.6.6",
     "validator": "^13.15.15"
