--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.2",
     "jsonwebtoken": "^9.0.2",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.14.3",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.3",
     "qs": "^6.14.0",
+    "sanitize-html": "^2.17.0",
     "slugify": "^1.6.6",
     "validator": "^13.15.15"
   },
