--- a/frontendVue/package.json
+++ b/frontendVue/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
+    "sass": "^1.89.2",
     "vite": "^7.0.4"
   }
 }
