--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.14.3",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.3",
     "qs": "^6.14.0",
     "sanitize-html": "^2.17.0",
+    "sharp": "^0.34.3",
     "slugify": "^1.6.6",
     "validator": "^13.15.15"
   },
