--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "hpp": "^0.2.2",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.14.3",
