--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sanitize-html": "^2.17.0",
     "sharp": "^0.34.3",
     "slugify": "^1.6.6",
+    "stripe": "^18.5.0",
     "validator": "^13.15.15"
   },
   "devDependencies": {
